package cliente;

public enum TipoCliente {
    NUEVO,
    FRECUENTE,
    VIP
}
