package descuento;

public interface DescuentoCliente {
    double aplicarDescuento(double monto);
}
