package pedido;

public enum EstadoPedido {
    PENDIENTE,
    PAGADO,
    EN_PREPARACION,
    ENVIADO,
    ENTREGADO,
    CANCELADO
}
